installed handlebars and jquery as a bower dependency - updated bower.json - updated gitignore to ignore bower_components folder

--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "jquery": "^2.2.1",
+    "handlebars": "^4.0.5"
+  }
 }
